[gd_scene load_steps=27 format=3 uid="uid://cvcua7q4keqn3"]

[ext_resource type="PackedScene" uid="uid://qjh4h6r7nww5" path="res://Scenes/battle_soul.tscn" id="1_ma1ba"]
[ext_resource type="Script" path="res://Scripts/battle_controller.gd" id="2_taess"]
[ext_resource type="PackedScene" uid="uid://tmovq4tcmgda" path="res://Scenes/combat_zone.tscn" id="3_agmmr"]
[ext_resource type="Texture2D" uid="uid://tpdj2mae3iil" path="res://Resources/Sprites/SpeechBubble.png" id="4_kn0io"]
[ext_resource type="Script" path="res://Scripts/speech_bubble.gd" id="5_pb5ae"]
[ext_resource type="FontVariation" uid="uid://be438q838t6oh" path="res://Resources/Fonts/styles/comicSansVariant.tres" id="6_piuie"]
[ext_resource type="AudioStream" uid="uid://13gpiwhn3i43" path="res://Resources/Sounds/SansSpeak.ogg" id="7_rkth3"]
[ext_resource type="Texture2D" uid="uid://djveown85plq7" path="res://Resources/Sprites/UI/FightActive.png" id="8_p1agq"]
[ext_resource type="Texture2D" uid="uid://dixswxvutcno4" path="res://Resources/Sprites/UI/Fight.png" id="9_1vr6p"]
[ext_resource type="Texture2D" uid="uid://b84jsn40th0h6" path="res://Resources/Sprites/UI/MercyActive.png" id="10_juirh"]
[ext_resource type="Texture2D" uid="uid://bow6juiucml11" path="res://Resources/Sprites/UI/Mercy.png" id="11_1auo4"]
[ext_resource type="Texture2D" uid="uid://d3n58oo2idn28" path="res://Resources/Sprites/UI/ItemActive.png" id="12_mcuwc"]
[ext_resource type="Texture2D" uid="uid://cwmbovj4biki" path="res://Resources/Sprites/UI/Item.png" id="13_mtp18"]
[ext_resource type="Texture2D" uid="uid://ck3eof4kjy527" path="res://Resources/Sprites/UI/ActActive.png" id="14_yhw15"]
[ext_resource type="Texture2D" uid="uid://b4r23exsby2qu" path="res://Resources/Sprites/UI/Act.png" id="15_e83yw"]
[ext_resource type="FontFile" uid="uid://df6horrttdwu" path="res://Resources/Fonts/undertale-in-game-hud-font.ttf" id="16_ppebc"]
[ext_resource type="AudioStream" uid="uid://dnyugy6hs76mb" path="res://Resources/Sounds/MenuCursor.ogg" id="17_xl1g0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c56tm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_p1agq")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_1vr6p")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_qixrn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yhw15")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_e83yw")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_uamvm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_mcuwc")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_mtp18")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_71xtk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_juirh")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_1auo4")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="FontVariation" id="FontVariation_qavlf"]
base_font = ExtResource("16_ppebc")
spacing_glyph = 6

[sub_resource type="LabelSettings" id="LabelSettings_ndomo"]
font = SubResource("FontVariation_qavlf")
font_size = 20

[sub_resource type="Animation" id="Animation_mnjtw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ckbld"]
resource_name = "fade"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tcdjl"]
_data = {
"RESET": SubResource("Animation_mnjtw"),
"fade": SubResource("Animation_ckbld")
}

[node name="Main Node" type="Node"]

[node name="Battle Controller" type="Node" parent="."]
script = ExtResource("2_taess")

[node name="CombatZone" parent="Battle Controller" instance=ExtResource("3_agmmr")]
position = Vector2(856, 1103)

[node name="Player" parent="Battle Controller" instance=ExtResource("1_ma1ba")]
unique_name_in_owner = true
z_index = 6
position = Vector2(1000, 1000)

[node name="SpeechBubble" type="Sprite2D" parent="Battle Controller"]
visible = false
texture_filter = 1
position = Vector2(1152, 321)
scale = Vector2(3, 3)
texture = ExtResource("4_kn0io")
centered = false
script = ExtResource("5_pb5ae")

[node name="RichTextLabel" type="RichTextLabel" parent="Battle Controller/SpeechBubble"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.137
anchor_top = 0.069
anchor_right = 0.137
anchor_bottom = 0.069
offset_left = 1.19767
offset_top = -0.509333
offset_right = 196.198
offset_bottom = 88.4907
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_piuie")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
scroll_active = false
shortcut_keys_enabled = false

[node name="SansSpeak" type="AudioStreamPlayer" parent="Battle Controller/SpeechBubble"]
stream = ExtResource("7_rkth3")

[node name="ContinueDelay" type="Timer" parent="Battle Controller/SpeechBubble"]
one_shot = true

[node name="MenuButtons" type="Node" parent="Battle Controller"]

[node name="Fight" type="AnimatedSprite2D" parent="Battle Controller/MenuButtons"]
texture_filter = 1
position = Vector2(96, 1296)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_c56tm")
centered = false

[node name="Act" type="AnimatedSprite2D" parent="Battle Controller/MenuButtons"]
texture_filter = 1
position = Vector2(552, 1296)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_qixrn")
centered = false

[node name="Item" type="AnimatedSprite2D" parent="Battle Controller/MenuButtons"]
texture_filter = 1
position = Vector2(1032, 1296)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_uamvm")
centered = false

[node name="Mercy" type="AnimatedSprite2D" parent="Battle Controller/MenuButtons"]
texture_filter = 1
position = Vector2(1488, 1296)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_71xtk")
centered = false

[node name="Name" type="Label" parent="Battle Controller"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.816
anchor_right = 0.05
anchor_bottom = 0.816
offset_top = 30.96
offset_right = 224.0
offset_bottom = 70.96
scale = Vector2(2.5, 2.5)
pivot_offset = Vector2(0, 21)
text = "Chara LV19"
label_settings = SubResource("LabelSettings_ndomo")
uppercase = true

[node name="MenuCursor" type="AudioStreamPlayer" parent="Battle Controller"]
stream = ExtResource("17_xl1g0")
bus = &"SoundEffects"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tcdjl")
}
autoplay = "fade"

[connection signal="textDone" from="Battle Controller/SpeechBubble" to="Battle Controller/SpeechBubble" method="_on_text_done"]
